[package]
name = "raid-organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = { git = "https://github.com/tokio-rs/axum", tag = "axum-v0.6.0-rc.2"}
bytes = "1.2"
hex = "0.4"
tokio = { version = "1.20", features=["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = {version="1",features=["derive"]}
serde_json = "1"
ed25519 = "1.5"
ed25519-dalek = "1.0"
tower-http={version="0.3", features=["trace"]}